feat: Proxy support

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -106,6 +106,7 @@ jobs:
             "poll_interval": 60,
             "max_retries": 3,
             "log_level": "INFO",
+            "proxy": null,
             "accounts": [],
             "notifiers": []
           }
