--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,7 @@ PySocks>=1.7.1
 # Configuration & Validation
 pydantic>=2.5.0
 # types-requests>=2.31.0
+
+# AI / LLM (optional — required for AI features)
+litellm>=1.30.0
 # types-beautifulsoup4>=4.12.0
