feat: add AI settings dashboard, custom rules, and smart translation
- Add `/settings` dashboard for language and mode control (JSON config).
- Implement `/rules` for natural language management of custom instructions (Markdown).
- Add dynamic prompt injection system combining system config and user rules.
- Enable smart auto-translation when email language differs from target.

--- a/config.example.json
+++ b/config.example.json
@@ -44,6 +44,7 @@
     "api_key": "sk-your-api-key",
     "model": "gpt-4o-mini",
     "base_url": null,
-    "default_mode": "hybrid"
+    "default_mode": "hybrid",
+    "language": "auto"
   }
 }
