fix: bundle litellm/tiktoken data files for PyInstaller packaging
- Add hooks/hook-litellm.py and hooks/hook-tiktoken.py for PyInstaller
  to auto-collect data files, submodules, and namespace packages
- Add --additional-hooks-dir hooks and explicit --hidden-import /
  --collect-data flags for litellm, tiktoken, tiktoken_ext in CI workflow
- Add runtime fallback in core/ai.py to create placeholder cost-map
  files when PyInstaller bundle lacks them (FileNotFoundError handler)
- Update scripts/package.py with tiktoken / litellm packaging args
- Add scripts/smoketest_litellm.py for local bundle verification
- Add local build & test instructions to docs (EN + ZH setup guides)

Squashed from: v1.1.0-beta.2 .. v1.1.0-beta.5

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -83,7 +83,15 @@ jobs:
         shell: bash
         run: |
           pyinstaller --clean --onefile \
+            --additional-hooks-dir hooks \
             --collect-all rich \
+            --hidden-import litellm \
+            --collect-data litellm \
+            --hidden-import tiktoken \
+            --hidden-import tiktoken_ext \
+            --hidden-import tiktoken_ext.openai_public \
+            --collect-data tiktoken_ext \
+            --hidden-import socksio \
             --name "mailbot-${{ matrix.tag }}" main.py
 
       # Bundle binary and create default config
