--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ beautifulsoup4>=4.12.0
 # HTTP Client
 requests>=2.31.0
 PySocks>=1.7.1
+httpx[socks]>=0.24.0
 
 # Configuration & Validation
 pydantic>=2.5.0
